# SupplierManager

./: .gitignore  .pre-commit-config.yaml  FILE_GUIDE.md  Makefile  README.md  RUN.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/auth/: models.py  router.py  schemas.py  service.py
backend/branches/: branch_router.py  models.py  repository.py  router.py  schemas.py  service.py
backend/catalog/: models.py  repository.py  router.py  schemas.py  service.py
backend/core/: config.py  database.py  dependencies.py  scheduler.py  security.py
backend/deliveries/: models.py  repository.py  router.py  schemas.py  service.py
backend/notifications/: models.py  router.py  schemas.py  service.py
backend/orders/: finalization.py  models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth.py  test_branches.py  test_catalog.py  test_deliveries.py  test_finalization.py  test_notifications.py  test_orders.py
frontend/: FLUTTER_SETUP.md  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/app/: app.dart  router.dart
frontend/lib/core/config/: app_config.dart
frontend/lib/core/network/: dio_client.dart
frontend/lib/core/storage/: token_storage.dart
frontend/lib/core/theme/: app_theme.dart
frontend/lib/l10n/: app_en.arb  app_he.arb
frontend/test/: auth_models_test.dart  branch_models_test.dart  factory_models_test.dart  widget_test.dart
scripts/: bootstrap_admin.py  check.sh  seed_dev.py
(+19 files in other folders)
